testData/nablarch/intellij/plugin/inspector/publishapi/非公開クラスの継承.java
package nablarch.intellij.plugin.inspector;

import nablarch.common.util.ParamsConvertor;
import nablarch.fw.ExecutionContext;
import nablarch.fw.web.HttpRequest;
import nablarch.fw.web.HttpResponse;

public class 非公開クラスの継承 extends <error descr="非公開APIです。(許可タグリスト:architect)">ParamsConvertor</error> {

    public 非公開クラスの継承() {
        <error descr="非公開APIです。(許可タグリスト:architect)">super('1', '2', '3')</error>;
    }
}
